--- a/Ipa/Modules/Reports/Manager/View/ManagerReportPage.xaml
+++ b/Ipa/Modules/Reports/Manager/View/ManagerReportPage.xaml
@@ -51,12 +51,25 @@ x:Class="Ipa.ManagerReportPage" Title="">
 		<Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
 			<StackLayout Spacing="0" VerticalOptions="FillAndExpand" BackgroundColor="#EEEEEE">
 				<StackLayout Spacing="0" HorizontalOptions="FillAndExpand" BackgroundColor="#EEEEEE">
-					<RelativeLayout x:Name="RelativeStack" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
-						<StackLayout BackgroundColor="#3B495D" 
+					<RelativeLayout x:Name="RelativeStack" HorizontalOptions="FillAndExpand" BackgroundColor="#3B495D" VerticalOptions="Fill">
+            <StackLayout 
+                        
+                         RelativeLayout.HeightConstraint="{ConstraintExpression Type=Constant,Constant=44}"
+						RelativeLayout.WidthConstraint="{ConstraintExpression Type=Constant,Constant=100}">
+              <StackLayout   x:Name="selectCourseMenu"   HorizontalOptions="CenterAndExpand" VerticalOptions="FillAndExpand" WidthRequest="100" Padding="10,12,10,10">
+                <Label x:Name="SelectCourseNameLabe" LineBreakMode="TailTruncation" Text="Select Course" FontFamily="{x:Static local:Constants.FontStyle}" TextColor="#FFFFFF" VerticalTextAlignment="Center" FontSize="15" />
+                
+                <StackLayout.GestureRecognizers>
+                  <TapGestureRecognizer Command="{Binding DropDownCmd}" />
+                </StackLayout.GestureRecognizers>
+              </StackLayout>
+            </StackLayout>
+            
+						<StackLayout 
 						RelativeLayout.HeightConstraint="{ConstraintExpression Type=Constant,Constant=44}" 
 						RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,ElementName=RelativeStack,Property=Width}">
 							<StackLayout Orientation="Horizontal"  x:Name="CourseMenu" HorizontalOptions="CenterAndExpand" VerticalOptions="FillAndExpand" WidthRequest="110" Padding="10,10,10,10">
-								<Label x:Name="CourseNameLabel" LineBreakMode="TailTruncation" Text="{Binding SelectedCourseName}" FontFamily="{x:Static local:Constants.FontStyle}" TextColor="#FFFFFF" VerticalTextAlignment="Center" FontSize="13" />
+                <Label x:Name="CourseNameLabel" LineBreakMode="TailTruncation" Text="{Binding SelectedCourseName}" FontFamily="{x:Static local:Constants.FontStyle}" TextColor="#FFFFFF" VerticalTextAlignment="Center" FontSize="13" />
 								<Image x:Name="DropDownImage" Source="drop_down.png" Style="{StaticResource DropDownImage}">
 								</Image>
 								<StackLayout.GestureRecognizers>
@@ -80,15 +93,15 @@ x:Class="Ipa.ManagerReportPage" Title="">
 					BackgroundColor="#FFFFFF"
 					HeightRequest="0"
 					RowHeight="30"
-					IsVisible="false"
+					IsVisible="true"
 					SeparatorVisibility="None">
 						<ListView.ItemTemplate>
 							<DataTemplate>
 								<ViewCell>
 									<ViewCell.View>
-									<StackLayout HorizontalOptions="FillAndExpand" BackgroundColor="#ef0f0f" HeightRequest="20" Spacing="0">
+									<StackLayout HorizontalOptions="FillAndExpand" BackgroundColor="#c7d5ed" HeightRequest="20" Spacing="0">
 											<StackLayout HorizontalOptions="FillAndExpand" Padding="10,0,0,0" HeightRequest="33" Spacing="0">
-												<Label  Text="{Binding CourseShortName}" LineBreakMode="TailTruncation" FontFamily="{x:Static local:Constants.FontStyle}" TextColor="#FFFFFF" HorizontalOptions="Fill" VerticalOptions="FillAndExpand" VerticalTextAlignment="Center" FontSize="13" />
+												<Label  Text="{Binding CourseShortName}" LineBreakMode="TailTruncation" FontFamily="{x:Static local:Constants.FontStyle}" TextColor="#888888" HorizontalOptions="Fill" VerticalOptions="FillAndExpand" VerticalTextAlignment="Center" FontSize="13" />
 												</StackLayout>
 												<StackLayout HorizontalOptions="FillAndExpand" Padding="10,0,0,0" Spacing="0">
 													<BoxView Style="{StaticResource BoxViewStyle}" />
