--- a/Ipa/Modules/Common Views/ManagerHomeItemView.xaml
+++ b/Ipa/Modules/Common Views/ManagerHomeItemView.xaml
@@ -10,58 +10,60 @@ x:Class="Ipa.ManagerHomeItemView">
 <!--			<OnPlatform x:TypeArguments="x:Int32" Android="68" iOS="62" x:Key="HeaderRowHeight" />-->
 <!--						<OnPlatform x:TypeArguments="x:Double" Android="138" iOS="130" x:Key="Height" />-->
 
-						<OnPlatform x:TypeArguments="x:Int32" Android="84" iOS="82" x:Key="ActivityRowHeight" />
+						<OnPlatform x:TypeArguments="x:Int32" Android="75" iOS="82" x:Key="ActivityRowHeight" />
 			</ResourceDictionary>
 			</ContentView.Resources>
-	<ContentView.Content>
-	<StackLayout HorizontalOptions="FillAndExpand" Spacing="0">
-	<StackLayout HorizontalOptions="FillAndExpand" Padding="10,0,0,0" BackgroundColor="#485faa">
-				<Label Text="MY COURSE(S)" Font="{x:Static local:Constants.FontStyle}" HeightRequest="42" VerticalTextAlignment="Center" TextColor="#FFFFFF" FontSize="12" />
-			</StackLayout>
-    <Views:ListSeperator />
-			<ListView 
-				x:Name="ManagerCourseList" 
-				ItemsSource="{Binding ManagerCourseList}" 
-				SelectedItem="{Binding SelectedCourse, Mode=TwoWay}" 
-				SeparatorVisibility="None" 
-				RowHeight="68"
-				HeightRequest="260"
+  <ContentView.Content>
+    <ScrollView Orientation="Vertical" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+    <StackLayout HorizontalOptions="FillAndExpand"  BackgroundColor="#FFFFFF">
+      <StackLayout HorizontalOptions="FillAndExpand" Padding="10,0,0,0" Spacing="0" BackgroundColor="#485faa">
+
+        <Label Text="MY COURSE(S)" Font="{x:Static local:Constants.FontStyle}" HeightRequest="42" VerticalTextAlignment="Center" TextColor="#FFFFFF" FontSize="12" />
+      </StackLayout>
+      <Views:ListSeperator />
+      <ListView
+				x:Name="ManagerCourseList"
+				ItemsSource="{Binding ManagerCourseList}"
+				SelectedItem="{Binding SelectedCourse, Mode=TwoWay}"
+				SeparatorVisibility="None"
+				RowHeight="{StaticResource ActivityRowHeight}"
 				BackgroundColor="White"
-				HorizontalOptions="FillAndExpand" 
+				HorizontalOptions="FillAndExpand"
 				VerticalOptions="Fill">
-				<ListView.ItemTemplate>
-					<DataTemplate>
-						<ViewCell>
-							<ViewCell.View>
-								<Views:ManagerCourseItemView CourseFullName="{Binding CourseFullName}" TimeSource="{Binding TimeSource}" TimeDescription="{Binding CourseStatus}" ReporteeStatus="{Binding TotalReportee}" />
-							</ViewCell.View>
-						</ViewCell>
-					</DataTemplate>
-				</ListView.ItemTemplate>
-			</ListView>
-			<StackLayout HorizontalOptions="FillAndExpand" Padding="10,0,0,0" BackgroundColor="#485faa">
-				<Label Text="UPCOMING/OVERDUE ACTIVITIE(S)" Font="{x:Static local:Constants.FontStyle}" VerticalTextAlignment="Center" HeightRequest="42" TextColor="#FFFFFF" FontSize="12" />
-			</StackLayout>
-    <Views:ListSeperator />
-			<ListView 
-				x:Name="ManagerActivityList" 
-				ItemsSource="{Binding ManagerActivityList}" 
-				SeparatorVisibility="None" 
+        <ListView.ItemTemplate>
+          <DataTemplate>
+            <ViewCell>
+              <ViewCell.View>
+                <Views:ManagerCourseItemView CourseFullName="{Binding CourseFullName}" TimeSource="{Binding TimeSource}" TimeDescription="{Binding CourseStatus}" ReporteeStatus="{Binding TotalReportee}" />
+              </ViewCell.View>
+            </ViewCell>
+          </DataTemplate>
+        </ListView.ItemTemplate>
+      </ListView>
+      <StackLayout HorizontalOptions="FillAndExpand" Padding="10,0,0,0" BackgroundColor="#485faa">
+        <Label Text="UPCOMING/OVERDUE ACTIVITIE(S)" Font="{x:Static local:Constants.FontStyle}" VerticalTextAlignment="Center" HeightRequest="42" TextColor="#FFFFFF" FontSize="12" />
+      </StackLayout>
+      <Views:ListSeperator />
+      <ListView
+				x:Name="ManagerActivityList"
+				ItemsSource="{Binding ManagerActivityList}"
+				SeparatorVisibility="None"
                 RowHeight="{StaticResource ActivityRowHeight}"
 				BackgroundColor="White"
 				SelectedItem="{Binding SelectedActivity, Mode=TwoWay}"
-				HorizontalOptions="FillAndExpand" 
+				HorizontalOptions="FillAndExpand"
 				VerticalOptions="Fill">
-				<ListView.ItemTemplate>
-					<DataTemplate>
-						<ViewCell>
-							<ViewCell.View>
+        <ListView.ItemTemplate>
+          <DataTemplate>
+            <ViewCell>
+              <ViewCell.View>
                 <Views:ActivityItemView ActivityName="{Binding ActivityName}" CourseName="{Binding CourseName}" StatusSource="{Binding TimeSource}" IndicatorText="{Binding TimeDescription}"/>
-							</ViewCell.View>
-						</ViewCell>
-					</DataTemplate>
-				</ListView.ItemTemplate>
-			</ListView>
-		</StackLayout>
-	</ContentView.Content>
+              </ViewCell.View>
+            </ViewCell>
+          </DataTemplate>
+        </ListView.ItemTemplate>
+      </ListView>
+    </StackLayout>
+    </ScrollView>
+  </ContentView.Content>
 </ContentView>
