--- a/Ipa/Modules/Reports/Manager/View/ManagerReportItemView.xaml
+++ b/Ipa/Modules/Reports/Manager/View/ManagerReportItemView.xaml
@@ -10,26 +10,28 @@ x:Class="Ipa.ManagerReportItemView">
 			<StackLayout Padding="10,0,0,0" HorizontalOptions="FillAndExpand" HeightRequest="38" BackgroundColor="#485faa">
 				<Label Text="SUMMARY SCORE CARD" FontFamily="{x:Static local:Constants.FontStyle}" FontAttributes="Bold" HorizontalOptions="Fill" VerticalOptions="FillAndExpand" VerticalTextAlignment="Center" TextColor="#FFFFFF" FontSize="12" />
 			</StackLayout>
-			<ListView 
-			x:Name="OverallReportList" 
-			ItemsSource="{Binding ReporteeList}" 
-			SelectedItem="{Binding SelectedReport,Mode=TwoWay}" 
-			SeparatorVisibility="None" 
-			HorizontalOptions="FillAndExpand" 
-			RowHeight="98" 
-			BackgroundColor="#FFFFFF"
-			VerticalOptions="Fill" 
-			HeightRequest="198">
-				<ListView.ItemTemplate>
-					<DataTemplate>
-						<ViewCell>
-							<ViewCell.View>
-								<Views:OverAllReportItemView ParticipantSource="{Binding ProfileImage}" ParticipantName="{Binding FullName}" L2BeliefAssessment="{Binding FeedBackScore}" L2SkillAssessment="{Binding L2SkillAssessment}" />
-							</ViewCell.View>
-						</ViewCell>
-					</DataTemplate>
-				</ListView.ItemTemplate>
-			</ListView>
+      <ScrollView Orientation="Vertical" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+        <ListView
+        x:Name="OverallReportList"
+        ItemsSource="{Binding ReporteeList}"
+        SelectedItem="{Binding SelectedReport,Mode=TwoWay}"
+        SeparatorVisibility="None"
+        HorizontalOptions="FillAndExpand"
+        RowHeight="98"
+        BackgroundColor="#FFFFFF" HeightRequest="500"
+        VerticalOptions="FillAndExpand"
+      >
+          <ListView.ItemTemplate>
+            <DataTemplate>
+              <ViewCell>
+                <ViewCell.View>
+                  <Views:OverAllReportItemView ParticipantSource="{Binding ProfileImage}" ParticipantName="{Binding FullName}" L2BeliefAssessment="{Binding L2BChangeOnPotential}" L2SkillAssessment="{Binding L2SkillAssessment}" />
+                </ViewCell.View>
+              </ViewCell>
+            </DataTemplate>
+          </ListView.ItemTemplate>
+        </ListView>
+      </ScrollView>
 		</StackLayout>
 	</ContentView.Content>
 </ContentView>
