--- a/Ipa/Modules/Reports/Manager/View/ManagerReportPage.xaml
+++ b/Ipa/Modules/Reports/Manager/View/ManagerReportPage.xaml
@@ -52,9 +52,7 @@ x:Class="Ipa.ManagerReportPage" Title="">
 			<StackLayout Spacing="0" VerticalOptions="FillAndExpand" BackgroundColor="#EEEEEE">
 				<StackLayout Spacing="0" HorizontalOptions="FillAndExpand" BackgroundColor="#EEEEEE">
 					<RelativeLayout x:Name="RelativeStack" HorizontalOptions="FillAndExpand" BackgroundColor="#3B495D" VerticalOptions="Fill">
-            <StackLayout 
-                        
-                         RelativeLayout.HeightConstraint="{ConstraintExpression Type=Constant,Constant=44}"
+            <StackLayout RelativeLayout.HeightConstraint="{ConstraintExpression Type=Constant,Constant=44}"
 						RelativeLayout.WidthConstraint="{ConstraintExpression Type=Constant,Constant=100}">
               <StackLayout   x:Name="selectCourseMenu"   HorizontalOptions="CenterAndExpand" VerticalOptions="FillAndExpand" WidthRequest="100" Padding="10,12,10,10">
                 <Label x:Name="SelectCourseNameLabe" LineBreakMode="TailTruncation" Text="Select Course" FontFamily="{x:Static local:Constants.FontStyle}" TextColor="#FFFFFF" VerticalTextAlignment="Center" FontSize="15" />
@@ -103,7 +101,7 @@ x:Class="Ipa.ManagerReportPage" Title="">
 											<StackLayout HorizontalOptions="FillAndExpand" Padding="10,0,0,0" HeightRequest="33" Spacing="0">
 												<Label  Text="{Binding CourseShortName}" LineBreakMode="TailTruncation" FontFamily="{x:Static local:Constants.FontStyle}" TextColor="#888888" HorizontalOptions="Fill" VerticalOptions="FillAndExpand" VerticalTextAlignment="Center" FontSize="13" />
 												</StackLayout>
-												<StackLayout HorizontalOptions="FillAndExpand" Padding="10,0,0,0" Spacing="0">
+												<StackLayout HorizontalOptions="FillAndExpand" Padding="0,0,0,0" Spacing="0">
 													<BoxView Style="{StaticResource BoxViewStyle}" />
 												</StackLayout>
 											</StackLayout>
