--- a/Ipa/Modules/Reports/Participant/View/ParticipantReportItemView.xaml
+++ b/Ipa/Modules/Reports/Participant/View/ParticipantReportItemView.xaml
@@ -67,15 +67,19 @@ x:Class="Ipa.ParticipantReportItemView">
 	</ContentPage.Resources>
 	<ContentView.Content>
 		<StackLayout HorizontalOptions="FillAndExpand" Spacing="0">
-			<StackLayout HeightRequest="65" Spacing="0">
+			<StackLayout HeightRequest="40" Spacing="0">
 			<StackLayout Padding="10,10,5,0">
 				<Label Text="OVERALL SUMMARY REPORT"  FontFamily="{x:Static local:Constants.FontStyle}" FontAttributes="Bold" TextColor="#FFFFFF" FontSize="12" VerticalTextAlignment="Center" />
-				<StackLayout Padding="0,0,0,0">
+				<!--<StackLayout Padding="0,0,0,0">
 				<Label Text="L1 FEEDBACK" FontFamily="{x:Static local:Constants.FontStyle}" VerticalTextAlignment="Center" TextColor="#FFFFFF" FontSize="12" />
+				</StackLayout> -->
 				</StackLayout>
-				</StackLayout>
+        
 			</StackLayout>
-			<StackLayout Spacing="0">
+      <BoxView HeightRequest="1" BackgroundColor="#FFFFFF" HorizontalOptions="FillAndExpand"></BoxView>
+      <StackLayout>
+      </StackLayout>
+		<!--	<StackLayout Spacing="0">
 				<Grid RowSpacing="1" ColumnSpacing="1" x:Name="FeedBackScore">
 					<Grid.RowDefinitions>
 						<RowDefinition Height="Auto" />
@@ -107,7 +111,7 @@ x:Class="Ipa.ParticipantReportItemView">
 						<Label x:Name="Score6" Text="" Style="{StaticResource FeedBacks}" />
 					</StackLayout>
 				</Grid>
-			</StackLayout>
+			</StackLayout>-->
 			<StackLayout Padding="10,0,0,0" HeightRequest="42">
 				<Label Text="L2 BELIEF ASSESSMENT" VerticalOptions="FillAndExpand" HorizontalOptions="Fill" Style="{StaticResource AssessmentList}" VerticalTextAlignment="Center" />
 			</StackLayout>
