--- a/Ipa/Modules/Reports/Participant/View/ParticipantReportPage.xaml
+++ b/Ipa/Modules/Reports/Participant/View/ParticipantReportPage.xaml
@@ -45,8 +45,18 @@ x:Name="ParticipantReport" Title="">
 		<Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
 			<StackLayout Spacing="0" HorizontalOptions="FillAndExpand" BackgroundColor="#EEEEEE">
 				<StackLayout Spacing="0" VerticalOptions="FillAndExpand" BackgroundColor="#EEEEEE">
-					<RelativeLayout x:Name="RelativeStack" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
-						<StackLayout BackgroundColor="#000000" 
+					<RelativeLayout x:Name="RelativeStack" HorizontalOptions="FillAndExpand" VerticalOptions="Fill" BackgroundColor="#3B495D">
+            <StackLayout RelativeLayout.HeightConstraint="{ConstraintExpression Type=Constant,Constant=44}"
+           RelativeLayout.WidthConstraint="{ConstraintExpression Type=Constant,Constant=100}">
+              <StackLayout   x:Name="selectCourseMenu"   HorizontalOptions="CenterAndExpand" VerticalOptions="FillAndExpand" WidthRequest="100" Padding="10,12,10,10">
+                <Label x:Name="SelectCourseNameLabe" LineBreakMode="TailTruncation" Text="Select Course" FontFamily="{x:Static local:Constants.FontStyle}" TextColor="#FFFFFF" VerticalTextAlignment="Center" FontSize="15" />
+
+                <StackLayout.GestureRecognizers>
+                  <TapGestureRecognizer Command="{Binding DropDownCmd}" />
+                </StackLayout.GestureRecognizers>
+              </StackLayout>
+            </StackLayout>
+						<StackLayout  
 						RelativeLayout.HeightConstraint="{ConstraintExpression Type=Constant,Constant=44}" 
 						RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,ElementName=RelativeStack,Property=Width}">
 							<StackLayout Orientation="Horizontal" x:Name="CourseMenu"  HorizontalOptions="CenterAndExpand" VerticalOptions="FillAndExpand" WidthRequest="110" Padding="10,10,10,10" >
@@ -71,12 +81,12 @@ x:Name="ParticipantReport" Title="">
 								<DataTemplate>
 									<ViewCell x:Name="cell">
 										<ViewCell.View>
-										<StackLayout HorizontalOptions="FillAndExpand" x:Name="CourseStackLayout"  HeightRequest="20" Spacing="0" BackgroundColor="#ef0f0f">
+										<StackLayout HorizontalOptions="FillAndExpand" x:Name="CourseStackLayout"  HeightRequest="20" Spacing="0" BackgroundColor="#c7d5ed">
 											<StackLayout HorizontalOptions="FillAndExpand" Padding="10,0,0,0" HeightRequest="33" Spacing="0">
-												<Label x:Name="Name" Text="{Binding CourseShortName}" TextColor="#FFFFFF" FontAttributes="Bold" LineBreakMode="TailTruncation"  FontFamily="{x:Static local:Constants.FontStyle}"  HorizontalOptions="Fill" VerticalOptions="FillAndExpand" VerticalTextAlignment="Center" FontSize="13">
+												<Label x:Name="Name" Text="{Binding CourseShortName}" TextColor="#888888" FontAttributes="Bold" LineBreakMode="TailTruncation"  FontFamily="{x:Static local:Constants.FontStyle}"  HorizontalOptions="Fill" VerticalOptions="FillAndExpand" VerticalTextAlignment="Center" FontSize="13">
 													</Label>
 												</StackLayout>
-												<StackLayout HorizontalOptions="FillAndExpand" Padding="10,0,0,0" Spacing="0" BackgroundColor="#ef0f0f">
+												<StackLayout HorizontalOptions="FillAndExpand" Padding="0,0,0,0" Spacing="0" BackgroundColor="#ef0f0f">
 													<BoxView Style="{StaticResource BoxViewStyle}" />
 												</StackLayout>
 											</StackLayout>
