--- a/Ipa/Modules/Attendance/Mark Attendance/View/MarkAttendancePage.xaml
+++ b/Ipa/Modules/Attendance/Mark Attendance/View/MarkAttendancePage.xaml
@@ -3,6 +3,7 @@
 xmlns="http://xamarin.com/schemas/2014/forms" 
 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
 xmlns:Views="clr-namespace:Ipa;assembly=Ipa" 
+xmlns:local="clr-namespace:Ipa;assembly=Ipa" 
 x:Class="Ipa.MarkAttendancePage">
 	<ContentPage.Padding>
 		<OnPlatform x:TypeArguments="Thickness">
